# Copyright 2023 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(camera)
add_subdirectory(deep)
add_subdirectory(differentials)
add_subdirectory(displayfilter)
add_subdirectory(geometry)
add_subdirectory(light)
add_subdirectory(map)
add_subdirectory(material)
add_subdirectory(misc)
add_subdirectory(motion_blur)
add_subdirectory(render_output)
add_subdirectory(rt)
add_subdirectory(sampling)
add_subdirectory(stereo)
add_subdirectory(volume)

