# Copyright 2023 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(instance_level_transforms)
add_subdirectory(curves)
add_subdirectory(explicit_attributes)
add_subdirectory(points)
add_subdirectory(primitive_attributes)
add_subdirectory(reverse_normals)
add_subdirectory(rotational_motion_blur)
add_subdirectory(sphere)

