# Copyright 2024 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(combined)
add_subdirectory(combined_mb)
add_subdirectory(deltas)
add_subdirectory(filter)
add_subdirectory(light_sets)
add_subdirectory(overlap_additive)
add_subdirectory(ray_termination_color)
add_subdirectory(shadow_controls)
add_subdirectory(sidedness)
add_subdirectory(spot_angle)
add_subdirectory(spot_texture_transformation)
add_subdirectory(spread)
add_subdirectory(textured_combined)
add_subdirectory(unbounded)

