# Copyright 2024 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(axis_angle)
add_subdirectory(checkerboard)
add_subdirectory(color_correct)
add_subdirectory(color_correct_hsv)
add_subdirectory(color_correct_legacy)
add_subdirectory(combine_normal)
add_subdirectory(deformation)
add_subdirectory(directional)
add_subdirectory(gradient)
add_subdirectory(image)
add_subdirectory(noise)
add_subdirectory(noise_worley)
add_subdirectory(normal)
add_subdirectory(normal_aniso)
add_subdirectory(op)
add_subdirectory(random)
add_subdirectory(remap)
add_subdirectory(rgb_to_float)
add_subdirectory(switch_color)
add_subdirectory(switch_float)
add_subdirectory(transform_space)
add_subdirectory(usd_primvarreader_float2)
add_subdirectory(usd_transform2d)
add_subdirectory(usd_uv_texture)
add_subdirectory(uv_transform)
