# Copyright 2024 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(axis_angle)
add_subdirectory(attribute)
add_subdirectory(blend)
add_subdirectory(checkerboard)
add_subdirectory(color_correct)
add_subdirectory(color_correct_hsv)
add_subdirectory(color_correct_legacy)
add_subdirectory(combine_normal)
add_subdirectory(deformation)
add_subdirectory(directional)
add_subdirectory(float_to_rgb)
add_subdirectory(gradient)
add_subdirectory(hair)
add_subdirectory(image)
add_subdirectory(lod)
add_subdirectory(multichannel_to_float)
add_subdirectory(noise)
add_subdirectory(noise_worley)
add_subdirectory(normal)
add_subdirectory(normal_aniso)
add_subdirectory(op)
add_subdirectory(openvdb)
add_subdirectory(project_camera)
add_subdirectory(project_camera_normal)
add_subdirectory(project_cylindrical)
add_subdirectory(ramp)
add_subdirectory(random)
add_subdirectory(remap)
add_subdirectory(rgb_to_float)
add_subdirectory(switch_color)
add_subdirectory(switch_float)
add_subdirectory(switch_normal)
add_subdirectory(toon)
add_subdirectory(transform_space)
add_subdirectory(udim)
add_subdirectory(usd_primvarreader_float2)
add_subdirectory(usd_transform2d)
add_subdirectory(usd_uv_texture)
add_subdirectory(uv_transform)
add_subdirectory(wireframe)
