# Copyright 2024 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(dwaadjustmaterial)
add_subdirectory(dwabase)
add_subdirectory(dwacolorcorrect)
add_subdirectory(dwafabric)
add_subdirectory(dwalayer)
add_subdirectory(dwametal)
add_subdirectory(dwamix)
add_subdirectory(dwarefractive)
add_subdirectory(dwaskin)
add_subdirectory(dwasoliddielectric)
add_subdirectory(dwatoon)
add_subdirectory(glitter)
# add_subdirectory(hair)
add_subdirectory(rayswitch)
add_subdirectory(self_intersecting_dielectric)
add_subdirectory(sss)
add_subdirectory(switch)

