# Copyright 2025 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(presence_map)
add_subdirectory(presence_max_depth)
add_subdirectory(presence_mirror)
add_subdirectory(presence_zero)
add_subdirectory(ray_depth)
add_subdirectory(ray_mask_propagate_off)
add_subdirectory(ray_mask_propagate_on)
add_subdirectory(shadow_ray_epsilon)
add_subdirectory(sidedness)
add_subdirectory(transparency)
add_subdirectory(transparency_map)
add_subdirectory(transparency_threshold)

