# Copyright 2025 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(bv_ramp)
add_subdirectory(cutout)
add_subdirectory(emission_vdb)
add_subdirectory(equiangular_mis)
add_subdirectory(frustum_vdb)
add_subdirectory(godrays)
add_subdirectory(homogenous_scattering)
add_subdirectory(instancing)
add_subdirectory(instancing_map_binding)
add_subdirectory(map_binding)
add_subdirectory(overlapping)
add_subdirectory(position)
add_subdirectory(shadowset)
add_subdirectory(transmittance)
add_subdirectory(velocity_motionblur)

