# Copyright 2024 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(anisotropy_negative)
add_subdirectory(anisotropy_positive)
add_subdirectory(basic)
add_subdirectory(clearcoat)
add_subdirectory(defaults)
add_subdirectory(fuzz)
add_subdirectory(fuzz_furnace)
add_subdirectory(fuzz_use_absorbing_fibers)

