# Copyright 2025 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(anisotropy_dir)
add_subdirectory(anisotropy_negative)
add_subdirectory(anisotropy_positive)
add_subdirectory(basic)
add_subdirectory(clearcoat)
add_subdirectory(defaults)
add_subdirectory(fuzz)
add_subdirectory(fuzz_furnace)
add_subdirectory(fuzz_use_absorbing_fibers)
add_subdirectory(ior)
add_subdirectory(iridescence_dielectric)
add_subdirectory(iridescence_metallic)
add_subdirectory(iridescence_ramp)
add_subdirectory(normal)
add_subdirectory(presence)
add_subdirectory(presence_layered)
add_subdirectory(roughness)
add_subdirectory(spheres)
add_subdirectory(thin_geometry_diffuse_transmission)
add_subdirectory(thin_geometry_reflection)
add_subdirectory(thin_geometry_subsurface_scattering)
add_subdirectory(thin_geometry_transmission)
add_subdirectory(tir)
add_subdirectory(toksvig)
add_subdirectory(transmission_ior)
add_subdirectory(transmission_roughness)
