# Copyright 2025 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(clearcoat)
add_subdirectory(dielectric_specular)
add_subdirectory(diffuse)
add_subdirectory(emission)
add_subdirectory(fabric)
add_subdirectory(furnace)
add_subdirectory(metallic_specular)
add_subdirectory(mixed_models)
add_subdirectory(mixed_subsurface)
add_subdirectory(toon_diffuse)
add_subdirectory(toon_specular)
add_subdirectory(transmission)
add_subdirectory(velvet)
