# Copyright 2025 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(curly)
add_subdirectory(color_correct)
add_subdirectory(defaults)
add_subdirectory(diffuse)
add_subdirectory(diffuse_furnace)
add_subdirectory(diffuse_subsurface)
add_subdirectory(emission)
add_subdirectory(fresnel)
add_subdirectory(furnace)
add_subdirectory(glint)
add_subdirectory(layer_basic)
add_subdirectory(layer_subsurface)
add_subdirectory(lobes_all)
add_subdirectory(lobes_r)
add_subdirectory(lobes_trt)
add_subdirectory(lobes_tt)
add_subdirectory(off)
add_subdirectory(surface_mapping)
add_subdirectory(toon)
add_subdirectory(transmission_saturation)

