# Copyright 2025 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(commmon)
add_subdirectory(delta_frame)
add_subdirectory(delta_frame_ortho)
add_subdirectory(delta_off)
add_subdirectory(delta_off_ortho)
add_subdirectory(delta_xform)
add_subdirectory(delta_xform_ortho)
