# Copyright 2025 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(child_labels)
add_subdirectory(extra_aovs)
add_subdirectory(light)
add_subdirectory(light_alias)
add_subdirectory(light_labels)
add_subdirectory(light_presence)
add_subdirectory(material)
add_subdirectory(material_labels)
add_subdirectory(material_properties)
add_subdirectory(prim_attr)
add_subdirectory(prim_attr_part_rdlmesh)
add_subdirectory(prim_attr_part_usd)
add_subdirectory(state)
add_subdirectory(visibility)
add_subdirectory(widget)

